# ALP

./: .clang-tidy  CMakeLists.txt
.github/workflows/: CI.yaml
publication/: CMakeLists.txt
publication/source_code/bench_compression_ratio/: CMakeLists.txt  chimp.cpp
publication/source_code/bench_end_to_end/: CMakeLists.txt
src/: CMakeLists.txt  encoder.cpp  fastlanes_generated_ffor.cpp
src/include/alp/: constants.hpp  encoder.hpp
test/: CMakeLists.txt  test_alp.cpp
